06/12/2015
  -OpenConnection now happens in the read/write functions.  Now need to use .SetIPAddress()
  
03/XX/2015
  -Removed "PackFormat" function, put the code back in the read function
  -Added ability to read a bit from a word

03/23/2015
  -Added ProcessorSlot.  If not in slot 0, use .SetProcessorSlot(n)

03/22/2015
  -Added check for connection in read/write functions, no longer crashes
  -Added change log

03/18/2015
  -Removed buildCIPTagRead and Write requests (now one funtion)
  
03/17/2015
  -Merged buildTagRead and Write Request into one common function called buildTagRequest
  -Cleaned up some code
  
03/16/2015
  -Reworked CIPRequest to read complex data types (specific array elements and UDT's)
  -Added ability to read a single simple array element
  
03/14/2015
  -Removed duplicate CIPTagReadRequest function (from testing)
  -Initial commit
  